v0.11
	* ADD : non-uplodable tags; tags with key beginnig and ending with an underscore ("_") won't be uploaded
	* ADD : ability to commit features from non-uplodable layers to the dirty layer, i.e. make them uploadable
	* FIX : bump MDC documents to version 1.1 due to bug-fixes in history saving; history from version 1.0 MDC won't be imported.
	* ADD : Basic support for waypoints/logpoints from gpx files
	* ADD : altitude and velocity to NMEA import
	* FIX : background image cache: delete older images from cache first
	* ADD : context menu functionality to the map
	* FIX : Show tracksegment even if it only intersects the viewport
	* ADD : Encode speed and slope in track segments
	* FIX : Handle relative paths when loading files
	* FIX : Clip track segments on viewport
	* ADD : Show length of selected way in info dock
	* ADD : Display distance in CreateSingleWay
	* FIX : "Dynamically" display all built-in styles in the preferences dialog rather than pre-defined ones
	* ADD :  special value "_NULL_" to TagSelector; matches non-existent or empty tag
	* FIX : allow punctuation in tag selector
	* ADD : "not", "true", "false", "[Default]" keywords to the Tag Selector; "[Default]" specifies the style for features not having a specific (i.e. non-default) style selected. Together with "Type Is", allows for "bug-fixing" styles "a la Maplint"
	* ADD : Implementation of a binary OSM file format targeted to mobile devices (*.osb); so far, is ~3x smaller and loads ~5x faster; format subject to changes and documentation
	* FIX : pixmap from background images were not freed, leading to ever growing memory consumption
	* FIX : problem with map adapters having limited zoom range (e.g. Maplint 12-16)
	* ADD : Style tag selector by type (e.g "Type is TrackPoint") and presence of tags (e.g. "HasTags"). Allows: 1) To show a generic icon for POI; 2) To display an icon for "lost" points with no roads nor tags.